--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,3 +18,17 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
+
+# change defaults and link all the Mac stuff
+- defaults:
+    link:
+      if: '[ "$(uname -s)" = "Linux" ]'
+- shell:
+  - description: apt-get install
+    command: |
+      if [ "$(uname -s)" = "Linux" ]; then
+        sudo apt-get update
+        #sudo apt-get install -y $(cat apt/packages.txt)
+      fi
+    stdout: true
+    stdin: true
