add basic vim config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,7 +9,7 @@
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: ohmyzsh
     ~/.tmux.conf: tmux.conf
-    ~/.config/nvim:
+      #~/.config/nvim:
 
 - link:
     ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions:
@@ -23,6 +23,9 @@
 - defaults:
     link:
       if: '[ "$(uname -s)" = "Linux" ]'
+
+- link:
+    ~/.vimrc: vimrc
 - shell:
   - description: apt-get install
     command: |
@@ -31,9 +34,9 @@
         # Install linux package
         sudo apt-get install -y $(cat apt/packages.txt)
         # Install nvim plugin manager Packer 
-        git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
+        #git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
         # From Packer install Neovim packages
-        nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
+        #nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
       fi
     stdout: true
     stdin: true
