add brew for macos

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "zsh-fzf-history-search"]
 	path = zsh-fzf-history-search
 	url = git@github.com:joshskidmore/zsh-fzf-history-search.git
+[submodule "dotbot-brewfile"]
+	path = dotbot-brewfile
+	url = https://github.com/sobolevn/dotbot-brewfile.git
