--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 bind c new-window -c '#{pane_current_path}'
 bind '\' split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
-bind b break-pane -d
+bind b last-window
 
 # VIM movement
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
