--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 set -g default-terminal 'screen-256color'
+set-option -g default-shell /bin/zsh
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -83,4 +84,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
