--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: ohmyzsh
     ~/.tmux.conf: tmux.conf
+    ~/.config/nnn: config/nnn/
     ~/.config/nvim:
 
 - link:
@@ -31,11 +32,11 @@
       if [ "$(uname -s)" = "Linux" ]; then
         sudo apt-get update
         # Install linux package
-        sudo apt-get install -y $(cat apt/packages.txt)
+        if [ "$(whoami)" = "root" ]; then   apt install -y <apt/packages.txt; else   sudo apt install <apt/packages.txt; fi
         # Install nvim plugin manager Packer 
-        #git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
+        git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
         # From Packer install Neovim packages
-        #nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
+        nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
       fi
     stdout: true
     stdin: true
