--- a/tmux.conf
+++ b/tmux.conf
@@ -82,6 +82,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# scrolling
+#bind-key -T vi-copy WheelUpPane scroll-up
+#bind-key -T vi-copy WheelDownPane scroll-down
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.tmux/plugins/tpm/tpm'
