--- a/config/alacritty.toml
+++ b/config/alacritty.toml
@@ -74,11 +74,11 @@ blinking = "never"
 shape = "Block"
 
 [font]
-size = 11.0
+size = 13.0
 
 [font.normal]
-family = "FiraCodeNerdFontMono"
-style = "Regular"
+family = "JetBrainsMono Nerd Font Mono"
+style = "Light"
 
 [[keyboard.bindings]]
 chars = "º"
@@ -149,7 +149,7 @@ save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 
 [shell]
-program = "/usr/bin/zsh"
+program = "/bin/zsh"
 
 [window]
 opacity = 0.99
