--- a/config/alacritty.toml
+++ b/config/alacritty.toml
@@ -2,6 +2,10 @@ live_config_reload = true
 #"window.dynamic_padding" = true
 #"window.dynamic_title" = true
 
+import = [
+    "~/.config/alacritty/themes/themes/monokai_pro.toml"
+]
+
 [bell]
 #animation = "EaseOutExpo"
 #color = "0xffffff"
@@ -11,57 +15,58 @@ duration = 0
 [colors]
 draw_bold_text_with_bright_colors = true
 
-[[colors.indexed_colors]]
-color = "0xdc9656"
-index = 16
 
-[[colors.indexed_colors]]
-color = "0xa16946"
-index = 17
-
-[[colors.indexed_colors]]
-color = "0x282828"
-index = 18
-
-[[colors.indexed_colors]]
-color = "0x383838"
-index = 19
-
-[[colors.indexed_colors]]
-color = "0xb8b8b8"
-index = 20
-
-[[colors.indexed_colors]]
-color = "0xe8e8e8"
-index = 21
-
-[colors.bright]
-black = "0x585858"
-blue = "0x7cafc2"
-cyan = "0x86c1b9"
-green = "0xa1b56c"
-magenta = "0xba8baf"
-red = "0xab4642"
-white = "0xf8f8f8"
-yellow = "0xf7ca88"
-
-[colors.cursor]
-cursor = "0xd8d8d8"
-text = "0x181818"
-
-[colors.normal]
-black = "0x181818"
-blue = "0x7cafc2"
-cyan = "0x86c1b9"
-green = "0xa1b56c"
-magenta = "0xba8baf"
-red = "0xab4642"
-white = "0xd8d8d8"
-yellow = "0xf7ca88"
-
-[colors.primary]
-background = "0x181818"
-foreground = "0xd8d8d8"
+#[[colors.indexed_colors]]
+#color = "0xdc9656"
+#index = 16
+#
+#[[colors.indexed_colors]]
+#color = "0xa16946"
+#index = 17
+#
+#[[colors.indexed_colors]]
+#color = "0x282828"
+#index = 18
+#
+#[[colors.indexed_colors]]
+#color = "0x383838"
+#index = 19
+#
+#[[colors.indexed_colors]]
+#color = "0xb8b8b8"
+#index = 20
+#
+#[[colors.indexed_colors]]
+#color = "0xe8e8e8"
+#index = 21
+#
+#[colors.bright]
+#black = "0x585858"
+#blue = "0x7cafc2"
+#cyan = "0x86c1b9"
+#green = "0xa1b56c"
+#magenta = "0xba8baf"
+#red = "0xab4642"
+#white = "0xf8f8f8"
+#yellow = "0xf7ca88"
+#
+#[colors.cursor]
+#cursor = "0xd8d8d8"
+#text = "0x181818"
+#
+#[colors.normal]
+#black = "0x181818"
+#blue = "0x7cafc2"
+#cyan = "0x86c1b9"
+#green = "0xa1b56c"
+#magenta = "0xba8baf"
+#red = "0xab4642"
+#white = "0xd8d8d8"
+#yellow = "0xf7ca88"
+#
+#[colors.primary]
+#background = "0x181818"
+#foreground = "0xd8d8d8"
 
 [cursor]
 unfocused_hollow = true
@@ -74,7 +79,7 @@ blinking = "never"
 shape = "Block"
 
 [font]
-size = 13.0
+size = 11.0
 
 [font.normal]
 family = "JetBrainsMono Nerd Font Mono"
